--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ html, body {
 	color: #393939;
     margin-left: 15px;
     margin-bottom: 40px;
-	background: #efefef;
+	background: #92b5a9;
 }
 h1{
     text-indent: 0em;
