--- a/de12/css/style.css
+++ b/de12/css/style.css
@@ -27,7 +27,7 @@ html, body {
 	color: #393939;
     margin-left: 15px;
     margin-bottom: 40px;
-	background: #dcd3b2;
+	background: #d5e3d4;
 }
 h1{
     text-indent: 0em;
