--- a/de34/css/style.css
+++ b/de34/css/style.css
@@ -31,12 +31,17 @@ html, body {
 	background: #d5e3d4;
 }
 h1{
-    text-indent: 0em; font-family: fantasy; font-size: 3rem;
+    text-indent: 0em;
+    font-family: fantasy;
+    font-size: 3rem;
+    border-bottom: 2px solid #393939;
+    width: 90%;
+    padding: 20px;
 }
 h2{
     font-family: 'Cherry Swash', cursive;
     margin-left: 1em;
-    margin-top: 1em;
+    margin-top: 2em;
 }
 h3{
     margin-left: 2em;
@@ -68,16 +73,14 @@ span.blackback{
 	left: 0;
 	width: 0;
 	height: 10px;
-	background-color: rgba(214, 217, 168, 0.5);
+	background-color: rgba(214, 217, 168, 0.6);
 	transition: width 0.3s;
 }
-
 .textlink03 a:hover::after {
 	width: 100%;
 }
-li{
-    margin-left: 3em;
+ul{
+    margin-left: 2em;
 }
-img{
-    margin-left: 3em;
+img{margin-left: 3em;
 }
